# InsightFlow

./: .gitignore  README.md  env.example.md  pyproject.toml  requirements.txt  testingQuestions.md
.streamlit/: config.toml
app/: main.py
app/schema/: model.py
app/services/: auth_service.py  chat_service.py
app/utils/: vector_utils.py
faiss_index/: index.faiss  index.pkl
resources/roles/hr/: hr_data.md
ui/: app.py
